Merging location Objex